Página inicial do instagram - html e css

--- a/page-instagram/index.html
+++ b/page-instagram/index.html
@@ -4,18 +4,54 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="..css/stle.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Instagram</title>
 </head>
 <body>
 
+    <!-- wrapper - conteiner principal -->
     <div class="instagram-wrapper">
+
+        <!-- primeira coluna da page contendo imagem do smartphone-->
         <div class="instagram-phone">
             <img src="./img/instagram-celular.png" alt="celular">
         </div>
 
+        <!-- segunda coluna da page contendo areas agrupadas-->
         <div class="instagram-continue">
-            
+
+            <!-- prupo 1 - Profile -->
+            <div class="group">
+                <img src="./img/instagram-logo.png" class="instagram-logo" alt="instagram logo">
+
+                <div class="profile-photo">
+                    <img src="./img/diogo-profile.png" alt="foto do perfil">
+                </div>
+
+                <a href="#" class="instagram-login">Continue como Diogo Barros</a>
+                <a href="#" class="instagram-logout">Remover conta</a>
+            </div>
+
+            <!-- grupo 2 - conta -->
+            <div class="group">
+                <p class="not-account">Não é Diogo Barros?</p>
+                <p class="not-account">
+                    <span class="link-blue">Alternar contas</span>
+                    ou
+                    <span class="link-blue">Inscrever-se</span>
+                </p>
+            </div>
+
+            <!-- grupo 3 - baixar app -->
+            <div class="group">
+                <p class="get-the-app">Baixe o aplicativo</p>
+
+                <div class="download">
+                    <a href="#" class="app-download"></a>
+                    <a href="#" class="app-download"></a>
+                </div>
+            </div>
+
         </div>
     </div>
     
