--- a/page-instagram/index.html
+++ b/page-instagram/index.html
@@ -43,8 +43,8 @@
             </div>
 
             <!-- grupo 3 - baixar app -->
-            <div class="group">
-                <p class="get-the-app">Baixe o aplicativo</p>
+            <div class="get-the-app">
+                <p class="get-app">Baixe o aplicativo!</p>
 
                 <div class="download">
                     <a href="#" class="app-download"></a>
