Página inicial do instagram - html e css

--- a/page-instagram/index.html
+++ b/page-instagram/index.html
@@ -17,10 +17,10 @@
             <img src="./img/instagram-celular.png" alt="celular">
         </div>
 
-        <!-- segunda coluna da page contendo areas agrupadas-->
+        <!-- segunda coluna da page contendo algumas sections-->
         <div class="instagram-continue">
 
-            <!-- prupo 1 - Profile -->
+            <!-- section 1 - Profile -->
             <div class="group">
                 <img src="./img/instagram-logo.png" class="instagram-logo" alt="instagram logo">
 
@@ -28,21 +28,21 @@
                     <img src="./img/diogo-profile.png" alt="foto do perfil">
                 </div>
 
-                <a href="#" class="instagram-login">Continue como Diogo Barros</a>
+                <a href="#" class="instagram-login">Continue como diogobarrosx</a>
                 <a href="#" class="instagram-logout">Remover conta</a>
             </div>
 
-            <!-- grupo 2 - conta -->
+            <!-- section 2 - conta -->
             <div class="group">
                 <p class="not-account">Não é Diogo Barros?</p>
                 <p class="not-account">
-                    <span class="link-blue">Alternar contas</span>
+                    <span class="link-blue"><a href="#">Alternar contas</a></span>
                     ou
-                    <span class="link-blue">Inscrever-se</span>
+                    <span class="link-blue"><a href="#">Inscrever-se</a></span>
                 </p>
             </div>
 
-            <!-- grupo 3 - baixar app -->
+            <!-- section 3 - baixar app -->
             <div class="get-the-app">
                 <p class="get-app">Baixe o aplicativo!</p>
 
