Página inicial do instagram - html css e js

--- a/page-instagram/index.html
+++ b/page-instagram/index.html
@@ -8,12 +8,20 @@
     <title>Instagram</title>
 </head>
 <body>
-
+    
     <!-- wrapper - conteiner principal -->
     <div class="instagram-wrapper">
 
         <!-- primeira coluna da page contendo imagem do smartphone-->
         <div class="instagram-phone">
+            <!-- slide -->
+            <div class="slide">
+                <img src="./img/slide/slide1.jpg" class="selected">
+                <img src="./img/slide/slide2.jpg">
+                <img src="./img/slide/slide3.jpg">
+                <img src="./img/slide/slide4.jpg">
+                <img src="./img/slide/slide5.jpg">
+            </div>
             <img src="./img/instagram-celular.png" alt="celular">
         </div>
 
@@ -54,6 +62,6 @@
 
         </div>
     </div>
-    
+    <script src="./js/script.js"></script> 
 </body>
 </html>
